--- a/googleui/www/css/index.css
+++ b/googleui/www/css/index.css
@@ -50,20 +50,39 @@ h2 {
     transform: translate(-60%, -30%);
 }
 
-#button {
+#button1 {
     position: fixed;
     background-color: rgb(0, 112, 255);
     color: white;
     border: none;
     border-radius: 5px;
-    height: 40px;
-    width: 90px;
+    height: 50px;
+    width: 120px;
     font-size: 12pt;
     right: 10px;
     font-weight: 500;
     top: 150px;
 }
 
-#button:active {
+#button1:active {
     background-color: rgb(88, 160, 255);
+}
+
+#button2 {
+    position: fixed;
+    background-color: transparent;
+    color: rgb(0, 112, 255);
+    border: 1px solid rgb(0, 112, 255);
+    border-radius: 5px;
+    height: 50px;
+    width: 120px;
+    font-size: 12pt;
+    right: 140px;
+    font-weight: 500;
+    top: 150px;
+}
+
+#button2:active {
+    color: rgb(88, 160, 255);
+    border: 1px solid rgb(88, 160, 255);
 }
