--- a/googleui/www/css/index.css
+++ b/googleui/www/css/index.css
@@ -12,10 +12,11 @@ header {
     left: 0;
     height: 40px;
     width: 100%;
+    background-color: white;
     border-bottom: 1px solid rgb(214, 214, 214);
 }
 
-.hamburger {
+#hamburger {
     display: grid;
     height: 10px;
     width: 25px;
@@ -25,7 +26,7 @@ header {
 }
 
 span {
-    background-color: grey;
+    background-color: rgb(0, 0, 0);
     width: 100%;
     height: 2px;
     margin-bottom: 5px;
@@ -62,6 +63,7 @@ h2 {
     right: 10px;
     font-weight: 500;
     top: 150px;
+    z-index: -99;
 }
 
 #button1:active {
@@ -80,9 +82,33 @@ h2 {
     right: 140px;
     font-weight: 500;
     top: 150px;
+    z-index: -99;
 }
 
 #button2:active {
     color: rgb(88, 160, 255);
     border: 1px solid rgb(88, 160, 255);
+}
+
+#menu {
+    width: 300px;
+    height: 90%;
+    position: absolute;
+    left: -300px;
+    bottom: 0;
+    background-color: rgb(255, 255, 255);
+    z-index: -1;
+    transition-duration: 0.5s;
+}
+
+#overlay {
+    width: 100%;
+    height: 90%;
+    z-index: -2;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    transition-duration: 0.5s;
 }
