--- a/googleui/www/css/index.css
+++ b/googleui/www/css/index.css
@@ -3,6 +3,16 @@ body, html {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+@font-face {
+    font-family: SegoeIcons;
+    src:url("../Fonts/Segoe Fluent Icons.ttf");
+}
+
+@font-face {
+    font-family: FlowCircular;
+    src:url("../Fonts/FlowCircular-Regular.ttf");
+}
+
 header {
     display: inline-flex;
     margin: 30px 0 auto auto;
@@ -111,4 +121,32 @@ h2 {
     background-color: rgba(0, 0, 0, 0.5);
     display: none;
     transition-duration: 0.5s;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    display: inline-flex;
+    z-index: 2;
+}
+
+.nav {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    width: 50%;
+    height: 50px;
+    border: none;
+    background-color: white;
+    color: gray;
+    font-size: 18pt;
+    font-family: SegoeIcons;
+}
+
+#home {
+    color: rgb(0, 112, 255);
+    border-top: 2px solid rgb(0, 112, 255);
 }
